--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js",
+    "test": "jest",
     "dev": "ts-node ./index.ts",
     "seed:run": "knex seed:run --knexfile ./src/database/knexfile.ts",
     "seed:make": "knex seed:make --knexfile ./src/database/knexfile.ts",
@@ -16,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^3.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
@@ -25,17 +27,24 @@
     "helmet": "^5.1.1",
     "knex": "^2.2.0",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
     "pg": "^8.7.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^29.4.0",
     "@types/knex": "^0.16.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.14",
+    "@types/supertest": "^2.0.12",
     "concurrently": "^7.3.0",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.19",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
